--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "manifest_version": 2,
+  "name": "Winterly Tab",
+  "author": "Diky hadna",
+  "version": "0.0.1",
+  "description": "Beautifully replace new tab screen with winter themed background. Image background automatically changed every 5 minutes, or you can change it manually.",
+  "icons": {
+    "16": "snowflake.png",
+    "48": "snowflake.png",
+    "128": "snowflake.png"
+  },
+  "chrome_url_overrides": {
+    "newtab": "index.html"
+  }
 }
