--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-blurhash": "^0.1.3",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
