--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
+    "blurhash": "^1.1.4",
     "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-blurhash": "^0.1.3",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
