--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
+    "blurhash": "^2.0.3",
     "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-blurhash": "^0.1.3",
