--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@craco/craco": "^6.3.0",
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
+    "prettier": "^2.7.1",
     "prop-types": "^15.7.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
